--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0-beta01'
     implementation 'com.android.support:support-vector-drawable:28.0.0-beta01'
     implementation 'com.android.support:design:28.0.0-beta01'
+    implementation 'jcifs:jcifs:1.3.17'
 }
